--- a/seguridadfinal/package.json
+++ b/seguridadfinal/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.0.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
